xidl-parser/tests/snapshots/test_enum__hir__enum_simple.snap
---
source: xidl-parser/tests/test-enum.rs
expression: hir
---
Specification(
    [
        TypeDcl(
            ConstrTypeDcl(
                EnumDcl(
                    EnumDcl {
                        annotations: [],
                        ident: "A",
                        member: [
                            Enumerator {
                                annotations: [],
                                ident: "B",
                            },
                            Enumerator {
                                annotations: [],
                                ident: "C",
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
)
